<resources>
    <string name="app_name">Bamboo</string>
    <string name="skip">Skip</string>
    <string name="SIGNIN">SIGN IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_sms">Enter your SMS code below</string>
    <string name="Resend_code">Resend Code in</string>
    <string name="seconds">30 seconds</string>
    <string name="Phone_Verification">Phone Verification</string>
    <string name="enter_yout_details">Enter Your Details</string>
    <string name="name_hint">Name</string>
    <string name="email_adress_hint">Email</string>
    <string name="user_adress_hint">Address</string>
    <string name="GO">GO</string>
    <string name="filter_hint">What are you looking for ?</string>
    <string name="categories">Categories</string>
    <string name="drawer_open">مغتوح</string>
    <string name="drawer_close">مفلق</string>
    <string name="material">Material</string>
    <string name="Wood">Wood</string>
    <string name="Fabric">Fabric</string>
    <string name="Leather">Leather</string>
    <string name="Metal">Metal</string>
    <string name="trappings">Trappings</string>
    <string name="Cherry">Cherry</string>
    <string name="Gray">Gray</string>
    <string name="oak">oak</string>
    <string name="Black">Black</string>
    <string name="White">White</string>
    <string name="Style">Style</string>
    <string name="Modern">Modern</string>
    <string name="Industrial">Industrial</string>
    <string name="Trade">Trade</string>
    <string name="Classic">Classic</string>
    <string name="Rustic">Rustic</string>
    <string name="Price">Price</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="Profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="my_coupons">My Coupons</string>
    <string name="help">Help</string>
    <string name="live_chat">Live Chat</string>
    <string name="phone_number">Phone Number</string>
    <string name="pio">pio</string>
    <string name="gmail">Gmail</string>
    <string name="address">Shipping address</string>
    <string name="Payment">Payment</string>
    <string name="currency">Currency</string>
    <string name="language">"Language "</string>
    <string name="notification">"Notification "</string>
    <string name="new_arrival">New arrival</string>
    <string name="see_all">See all</string>
    <string name="big_sales">Big sales</string>

    <string name="title_board">Various Stores</string>
    <string name="text_board1">"Our application contains many distinguished         international stores.   "</string>
    <string name="title_board2">Best Deals</string>
    <string name="text_board2">We find you the best offers and coupons to save you money.</string>
    <string name="title_board3">Add Coupon</string>
    <string name="text_board3">The application allows you to get the best products.</string>
    <string name="get_started">Get Started</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_uss">Contact Us</string>
    <string name="SINGUP">SignUp</string>
    <string name="welcom">Welcome, Please sign in to continue</string>
    <string name="have_acoount">Haven’t  account yet?</string>
    <string name="password">password</string>
    <string name="hot_offer">Hot Offers</string>
    <string name="Favlist">Favorite List</string>
    <string name="carts">Carts</string>
    <string name="checkout">Check Out</string>
    <string name="ADDTOCART">ADD TO CART</string>
    <string name="Active">Active</string>
    <string name="Completed">Completed</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="btn_map_text">Gaza-Al Jala St..</string>
    <string-array name="spinner_currency">
        <item>ILS</item>
        <item>USD</item>
    </string-array>
    <string-array name="spinner_Language">
        <item>English</item>
        <item>عربي</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="Search_Map">Search_Map</string>
    <string name="Shop_conversation">Shop Conversation</string>


</resources>