<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layoutDirection="ltr"
    tools:context=".view.fragments.MobileNumberFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/path_56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/raleway"
        android:padding="16dp"
        android:text="@string/skip"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/welcom"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline14" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:text="@string/have_acoount"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btn_sign"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_psssword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/editext_login_basic"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:maxLines="1"
        android:paddingLeft="25dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/colotHint"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_login_number" />

    <TextView
        android:id="@+id/tx_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/SINGUP"
        android:textColor="@color/text"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="@+id/textView34"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toTopOf="@+id/textView34"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/text"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="32dp"
        android:src="@drawable/group_297"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/guideline14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <TextView
        android:id="@+id/textInputEditText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edite_text_login"
        android:drawableLeft="@drawable/ic_palestine_icon"
        android:gravity="center"

        android:padding="10dp"
        android:text="  +970"
        android:textColor="@color/colorTextBlack"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_login_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:background="@drawable/edite_text_login_right"
        android:hint="Enter your mobile number"
        android:inputType="phone"
        android:maxLength="9"
        android:maxLines="1"
        android:padding="7dp"
        android:textColorHint="@color/colotHint"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textInputEditText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textInputEditText4" />

    <ImageView
        android:id="@+id/image_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_arrow_right"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_login_number"
        app:layout_constraintRight_toRightOf="@+id/edit_text_login_number"
        app:layout_constraintTop_toTopOf="@+id/edit_text_login_number" />

    <Button
        android:id="@+id/btn_sign"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="30dp"
        android:background="@color/text"
        android:fontFamily="@font/open_sans_semibold"
        android:foregroundTint="@color/text"
        android:padding="10dp"
        android:text="@string/SIGNIN"
        android:textAllCaps="true"
        android:textColor="@color/material_white"

        android:textSize="16sp"
        app:cornerRadius="7dp"

        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_login_number" />


</androidx.constraintlayout.widget.ConstraintLayout>