<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.HomeFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/path_56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_user__1_"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/material_white"
       android:layout_marginTop="16dp"
         android:layout_marginRight="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_map_view"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="2dp"
        android:background="@drawable/background_mp"

        android:fontFamily="@font/raleway"
        android:padding="12dp"
        android:text="@string/btn_map_text"
        android:textAllCaps="false"
        android:textColor="@color/material_white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/image_view_profile"
        app:layout_constraintTop_toTopOf="@+id/image_view_profile" />

    <TextView
        android:id="@+id/welcom_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alegreya_sans_light"
        android:text="Hi Gamal, welcome to"
        android:textColor="@color/text"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="BAMBOO Furniture"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="@+id/welcom_name"
        app:layout_constraintTop_toBottomOf="@+id/welcom_name" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_ads"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_filter" />
    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/spring_dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        app:dotsColor="#DFF0FB"
        app:dotsCornerRadius="8dp"
        app:dotsSize="9dp"

        app:dotsSpacing="4dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="@+id/view_pager_ads"
        app:layout_constraintTop_toBottomOf="@+id/view_pager_ads"
        app:selectedDotColor="@color/colorPrimary"
        app:stiffness="300" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_filter"
        android:visibility="invisible"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:background="@drawable/edit_text_filter"
        android:drawableRight="@drawable/ic_search_black_24dp"
        android:focusedByDefault="false"
        android:hint="@string/filter_hint"

        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="13dp"

        android:textColorHint="@color/colotHint"
        android:textSize="15sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintRight_toRightOf="@+id/image_view_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/new_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/new_arrival"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="@dimen/txt_subheading"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/spring_dots_indicator" />

    <TextView
        android:id="@+id/see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/see_all"
        android:textColor="@color/text"
        android:textSize="@dimen/txt_subheading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_arrival" />
<com.facebook.shimmer.ShimmerFrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</com.facebook.shimmer.ShimmerFrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/margin_12"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_arrival"
        tools:listitem="@layout/item_product_home" />
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerNewrivv"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/margin_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_arrival"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <include layout="@layout/shimmer" />
        <include layout="@layout/shimmer" />
        <include layout="@layout/shimmer" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/hot_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/big_sales"
        android:textColor="@color/text"
        android:textSize="@dimen/txt_subheading"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <TextView
        android:id="@+id/hot_offer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/hot_offer"
        android:layout_marginTop="6dp"
        android:textColor="@color/text"
        android:textSize="@dimen/txt_subheading"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/big_sales"
        />

    <TextView
        android:id="@+id/see_all_big_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_25"
        android:text="@string/see_all"
        android:textColor="@color/text"
        android:textSize="@dimen/txt_subheading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hot_offer" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/big_sales"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/margin_12"
        android:visibility="invisible"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hot_offer"
        tools:listitem="@layout/item_product_home" />



    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_big_sles"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/margin_12"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hot_offer"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <include layout="@layout/shimmer" />
        <include layout="@layout/shimmer" />
        <include layout="@layout/shimmer" />

    </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>








    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_hot_offer"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:visibility="visible"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hot_offer2" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/spring_dots_indicator_hot_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        app:dotsColor="#DFF0FB"
        app:dotsCornerRadius="8dp"
        app:dotsSize="9dp"

        app:dotsSpacing="4dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="@+id/view_pager_hot_offer"
        app:layout_constraintTop_toBottomOf="@+id/view_pager_hot_offer"
        app:selectedDotColor="@color/colorPrimary"
        app:stiffness="300" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>